--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^7.4",
         "illuminate/support": "^8.0",
         "illuminate/view": "^8.0",
-        "rapidez/core": "dev-master"
+        "rapidez/core": "@dev"
     },
     "autoload": {
         "psr-4": {
