--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.0|^8.1|^8.2",
-        "illuminate/support": "^9.0|^10.0|^11.0",
-        "illuminate/view": "^9.0|^10.0|^11.0",
+        "php": "^8.0|^8.1|^8.2|^8.3|^8.4",
+        "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
+        "illuminate/view": "^9.0|^10.0|^11.0|^12.0",
         "rapidez/core": "~0.54|^1.0|^2.0|^3.0"
     },
     "autoload": {
